--- a/AngularCRUD/src/app/employees/employee-list/employee-list.component.html
+++ b/AngularCRUD/src/app/employees/employee-list/employee-list.component.html
@@ -1,7 +1,7 @@
 <table class="table table-sm table-hover">
-  <tr *ngFor="let employee of employeeService.employeeList">
-    <td>{{employee.name}}</td>
-    <td>{{employee.salary}}</td>
+  <tr *ngFor="let employee of employeeList">
+    <td>{{employee?.employee_name}}</td>
+    <td>{{employee?.employee_salary}}</td>
     <td>
       <a class="btn" (click)="showForEdit(employee)">
         <i class="fa fa-pencil-square-o"></i>
@@ -12,3 +12,5 @@
     </td>
   </tr>
 </table>
+
+<!-- previe page ko {{employeeList | json}} -->
